config/envoy.yaml
node:
  cluster: wasmtest
  id: wasmtest

admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901

bootstrap_extensions:
- name: envoy.bootstrap.wasm
  typed_config:
    "@type": type.googleapis.com/envoy.extensions.wasm.v3.WasmService
    singleton: true
    config:
      root_id: cliregPlugin
      configuration:
        "@type": type.googleapis.com/google.protobuf.StringValue
        value: |
          {
            "my_config_value": "my_value"
          }
      vm_config:
        vm_id: "cliregvm"
        runtime: "envoy.wasm.runtime.v8"
        code:
          local:
            filename: "./cliregplugin.wasm"

static_resources:
  listeners:
  - address: 
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    # listener_filters:
    # - name: "envoy.filters.listener.tls_inspector"
    #   typed_config:
    #     "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          route_config:
            name: local_route
            virtual_hosts:
            - name: services
              domains:
              - "*"
              routes:
              - match:
                  path: "/"
                route:
                  cluster: webhooksite
                  prefix_rewrite: "/98f1cb6f-441b-48fd-9971-05acb6c9a8b5"
                  auto_host_rewrite: true
              - match:
                  prefix: "/"
                route:
                  cluster: webhooksite
                  prefix_rewrite: "/98f1cb6f-441b-48fd-9971-05acb6c9a8b5/"
                  auto_host_rewrite: true
          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              config:
                name: "cliregFilter"
                root_id: "cliregFilter"
                fail_open: false
                vm_config:
                  runtime: "envoy.wasm.runtime.v8"
                  vm_id: "cliregvm"
                  code:
                    local:
                      filename: "./cliregplugin.wasm"
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: webhooksite
    connect_timeout: 1s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: webhooksite
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: webhook.site
                port_value: 443
    # http2_protocol_options: {}
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: webhook.site
